--- a/RoamAI/Views/Shared/_Layout.cshtml
+++ b/RoamAI/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+
+                    <!-- _LoginPartial.cshtml burada çağrılıyor -->
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
