--- a/RoamAI/wwwroot/css/site.css
+++ b/RoamAI/wwwroot/css/site.css
@@ -1,5 +1,7 @@
 html {
     font-size: 16px;
+    position: relative;
+    min-height: 100%;
 }
 
 @media (min-width: 768px) {
@@ -9,10 +11,12 @@ html {
 }
 
 body {
-    margin-bottom: 60px;
+    padding-bottom: 60px; /* Footer yüksekliði */
+    margin: 0;
     background-color: #f4f4f4;
     color: #333;
     font-family: Arial, sans-serif;
+    box-sizing: border-box;
 }
 
 .container {
@@ -91,4 +95,15 @@ h2 {
 
 .alert {
     padding: 1rem;
+}
+
+/* Footer sabitleme */
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    text-align: center;
+    padding: 1rem 0;
+    color: white;
 }
