--- a/RoamAI/Views/Home/Index.cshtml
+++ b/RoamAI/Views/Home/Index.cshtml
@@ -114,7 +114,7 @@
             var selectedCity = $('#city').val(); // Get selected city value
             var cityContent = '';
 
-            if (selectedCity === 'Istanbul') {
+            if (selectedCity === 'İstanbul') {
                 cityContent = `
                     <div class="d-flex align-items-start">
                         <img src="/images/avatar0.png" alt="Avatar" class="rounded-circle mr-3" style="width:100px; height:100px;">
