--- a/RoamAI/Views/Travel/Index.cshtml
+++ b/RoamAI/Views/Travel/Index.cshtml
@@ -43,6 +43,10 @@
                 <li>@recommendation</li>
             }
         </ul>
+
+        <h3>@Model.City hakkında Bilgiler</h3>
+        <p>@Model.CityInformation</p> <!-- Şehir hakkında bilgiyi burada gösteriyoruz. -->
+
     }
 </div>
 
