--- a/RoamAI/Views/Trip/CreateTrip.cshtml
+++ b/RoamAI/Views/Trip/CreateTrip.cshtml
@@ -2,7 +2,7 @@
 
 <div>
     <h2>Travel Planı Oluştur</h2>
-    <form method="post" asp-action="GetRecommendations" asp-controller="Travel">
+    <form method="post" asp-action="GetRecommendations" asp-controller="Trip">
         <label>Ülke: </label>
         <select id="country" name="Country" class="choices" required>
             <option value="">Select Country</option>
