--- a/RoamAI/Views/Shared/_Layout.cshtml
+++ b/RoamAI/Views/Shared/_Layout.cshtml
@@ -20,11 +20,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Trip" asp-action="CurrentTrip">Güncel Seyahatim</a>
+
+                        </li
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Trip" asp-action="MyTrips">Seyahatlerim</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Trip" asp-action="CreateTrip">Seyahat Oluştur</a>
                         </li>
+                        
                     </ul>
 
                     <!-- _LoginPartial.cshtml burada çağrılıyor -->
